fix(xmlspan): use character offsets instead of byte offsets
XmlScanner scanned the raw UTF-8 bytes, but every consumer indexes the
decoded String, so a multi-byte character anywhere before an edit shifted
every later span: attribute values were sliced at the wrong place and edits
landed on the wrong characters (or threw StringIndexOutOfBoundsException).

Scan the decoded text and emit character offsets instead, so scanner spans,
String.substring and EditSet all share one coordinate system. Callers now
pass the same String they edit to XmlScanner.scan. The reader is closed in a
finally block.

Tests: a fixture derived from examples/MarkupReport.jrxml with a non-ASCII
comment before an unused field and a double-space expression; clear and
textcheck must reproduce byte-exact expected output. XmlScannerTest asserts
offsets index the String when bytes and characters diverge.